--- a/src/style.scss
+++ b/src/style.scss
@@ -12,7 +12,7 @@ $color-orange: #FF9F2D;
 $color-green: #0DC860;
 
 .zh-page{
-  width: 1920px;
+  width: 100%;
   header{
     position: relative;
     display: flex;
