--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
-ul, li{
+ul, li,
+h1, h2, h3, h4, h5, h6{
   padding: 0;
   margin: 0;
   list-style: none;
@@ -10,15 +11,36 @@ a:hover{
 $color-blue: #37A1F7;
 $color-orange: #FF9F2D;
 $color-green: #0DC860;
+$color-blue-lighter: rgba($color-blue, 0.8);
+$color-orange-lighter: rgba($color-orange, 0.8);
+$color-green-lighter: rgba($color-green, 0.8);
 
 .zh-page{
   width: 100%;
+  a{
+    text-decoration: none;
+  }
+
+  .row{
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9{
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  $header-height: 60px;
+
   header{
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    height: 90px;
-    background: #1f2535;
+    .header-wrap{
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+      height: $header-height;
+      background: #1f2535;
+    }
 
     .header-l{
       display: flex;
@@ -26,7 +48,7 @@ $color-green: #0DC860;
 
     .logo{
       width: 238px;
-      height: 90px;
+      height: $header-height;
     }
     .user-bar{
       li{
@@ -34,8 +56,8 @@ $color-green: #0DC860;
         text-align: center;
         width: 74px;
         color: $color-blue;
-        height: 90px;
-        line-height: 90px;
+        height: $header-height;
+        line-height: $header-height;
 
         a{
           color: $color-blue;
@@ -69,11 +91,11 @@ $color-green: #0DC860;
     flex: 1;
     .menu-item{
       display: inline-block;
-      width: 200px;
+      width: 150px;
       text-align: center;
       color: $color-blue;
-      height: 90px;
-      line-height: 90px;
+      height: $header-height;
+      line-height: $header-height;
 
       .icon{
         width: 20px;
@@ -94,7 +116,7 @@ $color-green: #0DC860;
 
       .menu-item-name{
         display: block;
-        height: 90px;
+        height: $header-height;
         position: relative;
       }
 
@@ -189,8 +211,15 @@ $color-green: #0DC860;
   background: #FFFFFF;
   box-shadow: 3px 5px 4px 0 rgba(2, 59, 115, 0.1);
   border-radius: 10px;
-  padding: 20px 30px;
-  margin-bottom: 30px;
+  padding: 20px;
+  margin-bottom: 10px;
+
+  .row{
+    .zh-panel-header{
+      margin-left: -30px;
+      margin-right: -20px;
+    }
+  }
 
   .subhead{
     display: inline-block;
@@ -204,8 +233,8 @@ $color-green: #0DC860;
 .zh-panel-header{
   height: 24px;
   line-height: 24px;
-  margin-left: -30px;
-  margin-right: -30px;
+  margin-left: -20px;
+  margin-right: -20px;
   font-size: 24px;
   font-weight: 400;
   text-indent: 30px;
@@ -216,6 +245,14 @@ $color-green: #0DC860;
   border-left: 4px solid $color-blue;
   margin-bottom: 30px;
 
+  a{
+    color: #1A161C;
+
+    &:hover{
+      color: #363f56;
+    }
+  }
+
   .subhead{
     margin-left: 20px;
   }
@@ -223,11 +260,14 @@ $color-green: #0DC860;
 }
 
 .zh-page-container{
+  max-width: 1920px;
+  margin: 0 auto;
   background: #F1F5F8;
+  padding: 5px;
   .board-container{
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     .board-header{
-      font-size: 24px;
+      font-size: 18px;
       color: #1A161C;
       padding: 5px 0;
       line-height: 44px;
@@ -240,25 +280,31 @@ $color-green: #0DC860;
     }
     .board-item1, .board-item2{
       flex: 1;
-      height: 118px;
+      padding: 20px;
       background: #FFFFFF;
       box-shadow: 3px 5px 4px 0 rgba(2, 59, 115, 0.1);
       border-radius: 10px;
-      padding: 20px;
     }
     .board-item1{
       position: relative;
+      height: 102px;
+
       .title{
-        font-size: 18px;
+        font-size: 16px;
         color: #1F2535;
         height: 20px;
         line-height: 20px;
-        margin-bottom: 5px;
+        margin-bottom: 15px;
       }
       .num{
         display: inline-block;
-        font-size: 48px;
+        font-size: 24px;
         color: $color-blue;
+        margin-right: 5px;
+
+        &:hover{
+          color: $color-blue-lighter;
+        }
       }
       .icon{
         position: absolute;
@@ -267,8 +313,8 @@ $color-green: #0DC860;
         width: 60px;
         height: 60px;
         display: inline-block;
-        top: 20px;
-        right: 20px;
+        top: 10px;
+        right: 10px;
 
         &.icon-host01{background-image: url("images/icon/host01.png");}
         &.icon-host02{background-image: url("images/icon/host02.png");}
@@ -288,17 +334,14 @@ $color-green: #0DC860;
       color: $color-blue;
     }
     .board-item2{
+      height: 120px;
       dl{
-        display: flex;
-        justify-content: space-around;
-      }
-      dt, dd{
-        display: inline-block;
-        height: 100%;
+        display: block;
       }
       dt{
+        display: block;
         color: #1F2535;
-        font-size: 20px;
+        font-size: 16px;
         font-weight: normal;
 
         &:before{
@@ -312,29 +355,41 @@ $color-green: #0DC860;
         }
       }
       dd{
-        flex: 1;
+        display: inline-block;
+        width: 49%;
         border-left: 1px solid #E0E6EB;
-        padding-left: 40px;
+        padding-left: 10%;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+
         &:first-of-type{
+          padding-left: 20%;
           border: none;
         }
         .num{
-          font-size: 40px;
-          line-height: 40px;
-          margin-bottom: 15px;
+          display: block;
+          font-size: 24px;
+          line-height: 33px;
 
           &.blue{
             color: $color-blue;
+
+            &:hover{ color: $color-blue-lighter }
           }
           &.orange{
             color: $color-orange;
+
+            &:hover{ color: $color-orange-lighter }
           }
           &.green{
             color: $color-green;
+
+            &:hover{ color: $color-green-lighter }
           }
         }
         .text{
-          font-size: 16px;
+          font-size: 14px;
           color: #666666;
         }
       }
@@ -344,14 +399,14 @@ $color-green: #0DC860;
     ul{
       display: flex;
       justify-content: space-around;
-      margin-left: -15px;
+      margin-left: -10px;
     }
     li{
-      margin-left: 15px;
+      margin-left: 10px;
     }
   }
   .main-dash-1{
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
   /**
    * 左边主界面
@@ -362,7 +417,7 @@ $color-green: #0DC860;
     padding-right: 0;
   }
   .zh-panel_storage{
-    height: 304px;
+    height: 278px;
   }
   /**
    * 轮播图
@@ -495,6 +550,7 @@ $color-green: #0DC860;
     }
 
     .num, .text{
+      display: block;
       text-align: center;
       text-overflow: ellipsis;
       white-space: nowrap;
@@ -561,10 +617,14 @@ $color-green: #0DC860;
         .li-value{
           flex: 1;
 
-          b{
+          b, a{
             font-size: 18px;
             color: $color-blue;
             font-weight: normal;
+
+            &:hover{
+              color: $color-blue-lighter;
+            }
           }
         }
       }
@@ -592,10 +652,14 @@ $color-green: #0DC860;
     padding: 30px 0;
     margin-bottom: 10px;
 
-    b{
+    b, a{
       font-weight: normal;
       color: #FF552D;
       font-size: 24px;
+
+      &:hover{
+        color: $color-orange-lighter;
+      }
     }
   }
   .os-info-2{
@@ -627,18 +691,31 @@ $color-green: #0DC860;
     }
 
     .num{
+      display: block;
       font-size: 24px;
       line-height: 24px;
       margin-bottom: 10px;
 
       &.blue{
         color: $color-blue;
+
+        &:hover{
+          color: $color-blue-lighter;
+        }
       }
       &.orange{
         color: $color-orange;
+
+        &:hover{
+          color: $color-orange-lighter;
+        }
       }
       &.green{
         color: $color-green;
+
+        &:hover{
+          color: $color-green-lighter;
+        }
       }
     }
     .text{
@@ -674,10 +751,14 @@ $color-green: #0DC860;
       .li-value{
         flex: 1;
 
-        b{
+        b, a{
           font-size: 18px;
           color: $color-blue;
           font-weight: normal;
+
+          &:hover{
+            color: $color-blue-lighter;
+          }
         }
       }
     }
@@ -687,11 +768,10 @@ $color-green: #0DC860;
    * 右侧边栏
    */
   .side-right{
-    padding-top: 15px;
-    padding-right: 15px;
+
   }
   .side-title{
-    font-size: 24px;
+    font-size: 18px;
     color: #1A161C;
     padding: 5px 0;
     line-height: 44px;
@@ -704,27 +784,44 @@ $color-green: #0DC860;
       font-size: 0;
     }
     li{
-      display: inline-block;
+      display: block;
       width: 46%;
       margin-left: 4%;
-      text-align: center;
-      background: #FFFFFF;
-      border: 1px solid $color-blue;
+      box-shadow: 3px 5px 4px 0 rgba(2, 59, 115, 0.1);
       border-radius: 6px;
-      height: 50px;
-      line-height: 50px;
-      margin-bottom: 30px;
+      height: 70px;
+      margin-bottom: 10px;
+      padding: 10px 15px;
+      background: #ffffff;
+      float: left;
       overflow: hidden;
-    }
-    a{
-      display: block;
-      font-size: 16px;
-      color: $color-blue;
+
+      a{
+        display: block;
+        color: $color-blue;
+        overflow: hidden;
+
+        h6{
+          color: #1F2535;
+          font-size: 12px;
+          line-height: 27px;
+        }
+        span{
+          color: $color-blue;
+          font-size: 14px;
+        }
+      }
 
       &:hover{
         background: $color-blue;
-        color: #fff;
+
+        a{
+          h6, span{
+            color: #fff;
+          }
+        }
       }
+
     }
   }
   // 数据bar容器
@@ -764,10 +861,15 @@ $color-green: #0DC860;
           background: #6AB9F9;
         }
         .progress-label{
+          display: block;
           width: 50px;
           padding-left: 10px;
           font-size: 14px;
           color: $color-blue;
+
+          &:hover{
+            color: $color-blue-lighter;
+          }
         }
       }
     }
@@ -799,9 +901,14 @@ $color-green: #0DC860;
         color: #666666;
       }
       .data{
+        display: block;
         font-size: 20px;
         color: $color-blue;
-        text-align: right;;
+        text-align: right;
+
+        &:hover{
+          color: $color-blue-lighter;
+        }
       }
     }
   }
@@ -809,7 +916,7 @@ $color-green: #0DC860;
 
 #storage{
   width: 100%;
-  height: 200px;
+  height: 180px;
 }
 
 
