--- a/src/style.scss
+++ b/src/style.scss
@@ -261,6 +261,7 @@ $color-green-lighter: rgba($color-green, 0.8);
 
 .zh-page-container{
   max-width: 1920px;
+  min-width: 1440px;
   margin: 0 auto;
   background: #F1F5F8;
   padding: 5px;
